@@ -13,6 +13,7 @@ CMD-R runs all the specs in one file
 CMD-SHIFT-R runs an individual spec
 CMD-OPT-R runs any files or directories selected in the TextMate drawer
 
+* Applied [#14156] False positives with should_not (Patch from Antti Tarvainen)
 * Applied [#14170] route_for and params_from internal specs fixed (Patch from Antti Tarvainen)
 * Fixed [#14166] Cannot build trunk
 * Applied [#14142] Fix for bug #11602: Nested #have_tag specifications fails on the wrong line number (Patch from Antti Tarvainen)
